--- a/property-pulse/package.json
+++ b/property-pulse/package.json
@@ -9,9 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "mongodb": "^6.5.0",
+    "mongoose": "^8.3.2",
+    "next": "14.2.1",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.1"
+    "react-icons": "^5.1.0",
+    "react-spinners": "^0.13.8"
   },
   "devDependencies": {
     "postcss": "^8",
